--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@ body {
 .cover-album {
     max-width: 80%;
     margin: auto;
-    background: url('../img/bg-capa.jpg') no-repeat;
+    background: url('https://pakawacast.com/media/pakawacast-default.png') no-repeat;
     background-size: cover;
     border: 1px solid #383838;
     box-shadow: 0px 5px 10px 3px rgba(0, 0, 0, 0.4);
@@ -68,7 +68,7 @@ body {
 .watermark {
     width: 89px;
     height: 35px;
-    background: url(../img/logo.png) no-repeat;
+    background: url('../img/logo.png') no-repeat;
     background-size: auto 35px;
     opacity: 0.5;
     position: relative;
@@ -266,7 +266,7 @@ input[type=range]::-ms-thumb {
     height: 95px;
     margin-right: 15px;
     float: left;
-    background: url('../img/bg-capa.jpg') no-repeat;
+    background: url('https://pakawacast.com/media/pakawacast-default.png') no-repeat;
     background-size: cover;
     border: 1px solid #383838;
     box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.3);
